@@ -1,6 +1,7 @@
 2009-09-22  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug: PHP warning occurs when extension is configured the first time in EM
+	* Cleanup: Removed require_once() calls and TYPO3_MODE checks from unit tests
 
 2009-09-09  Marcus Krause <marcus#exp2009@t3sec.info>
 	* Refactoring: Extracted method getLengthBase64FromBytes()
